# zedless

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.py  flake.nix  patch.py  source-info.json  typos.toml
.zed/: settings.json
crates/activity_indicator/src/: activity_indicator.rs
crates/agent/src/: thread.rs
crates/agent_servers/src/: agent_servers.rs
crates/agent_ui/src/: agent_configuration.rs  agent_panel.rs  agent_ui.rs  inline_prompt_editor.rs  language_model_selector.rs  message_editor.rs
crates/assistant_context/src/: assistant_context.rs
crates/call/: Cargo.toml
crates/cli/src/: main.rs
crates/client/src/: user.rs
crates/gpui/src/: app.rs  platform.rs
crates/inline_completion/src/: inline_completion.rs
crates/inline_completion_button/src/: inline_completion_button.rs
crates/language/src/: language_registry.rs
crates/language_tools/src/: lsp_tool.rs
crates/project/src/: lsp_store.rs
crates/proto/proto/: app.proto  call.proto  zed.proto
crates/proto/src/: proto.rs
crates/release_channel/src/: lib.rs
crates/title_bar/src/: title_bar.rs
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  (+1 more)
crates/zedless/: Cargo.toml
crates/zedless_settings/: Cargo.toml
crates/zedless_settings/src/: zedless_settings.rs
docs/src/: linux.md  system-requirements.md
match/: __init__.py  rust.py
nix/: cargo-hashes.nix  package.nix  shell.nix  source.nix
nix/packaging/: default.nix
script/: install.sh  uninstall.sh
script/flatpak/: bundle-flatpak
unmaintained-scripts-do-not-use/: README.md
(+23 files in other folders)
