[package]
name = "zedless_settings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/zedless_settings.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
schemars.workspace = true
settings.workspace = true
serde.workspace = true
workspace-hack.workspace = true
